# cupy-xarray

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci-tests.yml  pypi-release.yaml
ci/: doc.yml
cupy_xarray/: __init__.py  _version.py  accessors.py  cog3pio.py  kvikio.py
cupy_xarray/tests/: test_accessors.py  test_cog3pio.py  test_kvikio.py
docs/: api.rst  changelog.md  conf.py  index.md  index.rst  kvikio.ipynb  quickstart.ipynb
docs/examples/: 06_real-example.ipynb  07_kvikio.ipynb
docs/source/: Notebook0_Introduction.ipynb  Notebook1_Xarray_Cupy.ipynb  Notebook2_Xarray_Cupy_BasicOperations.ipynb  Notebook3_Xarray_Cupy_HighLevel.ipynb  Notebook4_Xarray_Cupy_ApplyUfunc.ipynb  Notebook5_Xarray_Cupy_Example.ipynb  apply-ufunc.ipynb  basic-computations.ipynb  contributing.rst  cupy-basics.ipynb  high-level-api.ipynb  introduction.ipynb  tutorials-and-presentations.rst
