[build-system]
requires = ["setuptools>=77", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "cupy-xarray"
description = "Interface for using cupy in xarray, providing convenience accessors."
authors = [{name = "cupy-xarray developers"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "xarray>=2024.02.0",
]

[project.optional-dependencies]
test = [
    "dask",
    "pytest",
]

[tool.ruff]
line-length = 100  # E501 (line-too-long)
exclude = [
    "docs",
    "versioneer.py",
    "cupy_xarray/_version.py",
]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "SIM",  # flake8-simplify
    "W",    # pycodestyle warnings
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "cupy_xarray/_version.py"
versionfile_build = "cupy_xarray/_version.py"
tag_prefix = ""
parentdir_prefix = ""
